# Server_Rust_Task

./: Cargo.toml  SOLUTION.md
src/: server.rs
tests/: client_test.rs
