[package]
name = "embedded-recruitment-task"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[dependencies]
log = "0.4.2"
prost = "0.13.4"
prost-types = "0.13.4"
async-std = { version = "1.13", features = ["attributes"] }
tokio = { version = "1", features = ["full"] }
rand = "0.8"

[build-dependencies]
prost-build = "0.13.4"

[dev-dependencies]
pretty_assertions = "1.4.1"
